四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -301,7 +301,7 @@ $$
 
 #### ​**​(1) 功能概述**​
 
--   ​**动力学模型**​：基于牛顿-欧拉方程，模拟四旋翼的六自由度运动（3个平移自由度 + 3个旋转自由度）。
+-   ​**动力学模型**​：基于牛顿-欧拉方程，模拟四旋翼的六自由度运动（3个平移自由度 + 3个旋转自由度）。其核心作用是将输入的`推力F​​`和`​力矩M`转换为无人机的运动状态，包括位置、速度、姿态角和角速度
 -   ​**输入输出关系**​：
     -   ​**输入**​：推力 `F`、力矩 `M`。
     -   ​**输出**​：
@@ -410,7 +410,7 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI4MzgxODk1NiwtNTMxOTc5MjI5LDEwND
+eyJoaXN0b3J5IjpbLTM5Mjg0NTMzMiwtNTMxOTc5MjI5LDEwND
 M4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEy
 MzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMj
 MxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3
