--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -310,10 +310,10 @@ $$
         -   ​**姿态角**​：`phi`（滚转）、`theta`（俯仰）、`psi`（偏航）。
         -   ​**角速度**​：`p, q, r`（绕X/Y/Z轴的角速度）。
 
-#### ​**​(2) 内部逻辑（假设展开后）​**​
+#### ​(2) 内部逻辑
 
-1.  ​**推力分配**​：将总推力 `F` 分配到四个电机（需展开查看电机模型）。
-2.  ​**力矩计算**​：根据电机转速差生成三轴力矩 `M`。
+1.  ​**推力分配**​：将总推力 `F` 分配到四个电机
+2. 2.  ​**力矩计算**​：根据电机转速差生成三轴力矩 `M`。
 3.  ​**运动方程**​：
     -   ​**平移运动**​：`m * [dx; dy; dz] = [0; 0; F] - m * g * [0; 0; 1]`（考虑重力）。
     -   ​**旋转运动**​：`I * [dp; dq; dr] = M - cross([p; q; r], I * [p; q; r])`（欧拉方程，`I` 为转动惯量矩阵）。
@@ -410,9 +410,9 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM5Mjg0NTMzMiwtNTMxOTc5MjI5LDEwND
-M4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEy
-MzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMj
-MxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3
-NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbNTMwODc5NDM5LC01MzE5NzkyMjksMTA0Mz
+g0MzI0LDEyOTY5NTcxMTAsMTIxMTk3OTAxNywtMTU4MTUyMTIz
+OCwtOTkyOTczNjcwLDM1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMz
+EzMjUzMDUsODY4MzMzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2
+LDEzOTM2NzgwNzQsLTQxODc4OTAwMV19
 -->
