四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -313,7 +313,7 @@ $$
 #### ​(2) 内部逻辑
 
 1.  ​**推力分配**​：将总推力 `F` 分配到四个电机
-2. 2.  ​**力矩计算**​：根据电机转速差生成三轴力矩 `M`。
+2.  ​**力矩计算**​：根据姿态期望与实际差生成三轴力矩 `M`。
 3.  ​**运动方程**​：
     -   ​**平移运动**​：`m * [dx; dy; dz] = [0; 0; F] - m * g * [0; 0; 1]`（考虑重力）。
     -   ​**旋转运动**​：`I * [dp; dq; dr] = M - cross([p; q; r], I * [p; q; r])`（欧拉方程，`I` 为转动惯量矩阵）。
@@ -323,7 +323,7 @@ $$
 
 ### ​4. 输出模块解析
 
-#### ​(1) `QuadrotorState (send state)`​
+#### ​(1) QuadrotorState (send state)​
 
 -   ​**作用**​：输出无人机的完整状态信息，供其他子系统（如PID控制器、可视化模块）使用
 -   ​**输出信号**​：
@@ -331,7 +331,7 @@ $$
     -   ​**姿态**​：`phi, theta, psi`（欧拉角形式）
     -   ​**速度**​：`dx, dy, dz`（线速度）和 `p, q, r`（角速度）
 
-#### ​(2) `state` 和 `out_state`​
+#### ​(2) `state` 和 out_state​
 
 -   ​**作用**​：将关键状态信号单独输出，用于实时监控或记录。
 -   ​**典型用途**​：
@@ -410,9 +410,9 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTMwODc5NDM5LC01MzE5NzkyMjksMTA0Mz
-g0MzI0LDEyOTY5NTcxMTAsMTIxMTk3OTAxNywtMTU4MTUyMTIz
-OCwtOTkyOTczNjcwLDM1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMz
-EzMjUzMDUsODY4MzMzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2
-LDEzOTM2NzgwNzQsLTQxODc4OTAwMV19
+eyJoaXN0b3J5IjpbLTE0OTc0MTQwMDIsLTUzMTk3OTIyOSwxMD
+QzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIx
+MjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLT
+IzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDky
+NzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
