四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -331,11 +331,11 @@ $$
     -   ​**姿态**​：`phi, theta, psi`（欧拉角形式）
     -   ​**速度**​：`dx, dy, dz`（线速度）和 `p, q, r`（角速度）
 
-#### ​(2) `state` 和 out_state​
+#### ​(2) state 和 out_state​
 
 -   ​**作用**​：将关键状态信号单独输出，用于实时监控或记录。
 -   ​**典型用途**​：
-    -   连接示波器（如模型右侧的 `查看结果` 模块）观察动态响应。
+    -   连接示波器观察动态响应。
     -   导出数据到MATLAB工作空间进行后处理。
 
 ----------
@@ -357,11 +357,6 @@ $$
 #### ​​(3) 反馈回路​
 
 -   ​**状态反馈**​：输出信号（如姿态角、位置）可能通过外部控制器（如PID模块）生成新的 `F` 和 `M`，形成闭环控制。
--   ​**示例**​：
-    
-    markdown
-    
-    复制
     
     ```markdown
     z（实际高度） → PID控制器 → F（推力修正） → quadrotor3_system → z（更新高度）
@@ -410,9 +405,9 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTc0MTQwMDIsLTUzMTk3OTIyOSwxMD
-QzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIx
-MjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLT
-IzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDky
-NzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbNzM2NTc2MzAyLC01MzE5NzkyMjksMTA0Mz
+g0MzI0LDEyOTY5NTcxMTAsMTIxMTk3OTAxNywtMTU4MTUyMTIz
+OCwtOTkyOTczNjcwLDM1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMz
+EzMjUzMDUsODY4MzMzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2
+LDEzOTM2NzgwNzQsLTQxODc4OTAwMV19
 -->
