--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -147,12 +147,12 @@ $$
 
 ###  1、 位置控制模块​
 
-#### ​（1）输入信号​
+#### ​1. 输入信号​
 
 -   ​**期望位置**​：`x_d`（X轴）、`y_d`（Y轴）、`z_d`（Z轴）及对应的**变化率**​（如 `dx_d/dt`、`dy_d/dt`、`dz_d/dt`）。
 -   ​**物理意义**​：无人机在三维空间中的目标轨迹（8字形）
 
-#### ​  (2）高度控制子模块​（Z轴）
+#### ​  2. 高度控制子模块​（Z轴）
 
 -   ​**功能**​：独立控制Z轴高度（`z_d`），生成垂直方向推力 `F`。
 -   ​**算法**​：通常为PID控制算法，计算高度误差（`error z = z_d - z_actual`）并调节推力。
@@ -163,7 +163,7 @@ $$
 ![高度控制子模块](/imgs/2025-05-12/LLhcTqulHOfmXJya.png "高度控制子模块")
 - **说明**：此处的QuadrotorState `From`模块由后续的三维四旋翼动态系统生成
 
-#### ​​（3）水平位置控制（X/Y轴）​​
+#### ​​3. 水平位置控制（X/Y轴）​​
 
 -   ​**功能**​：将X/Y轴的位置误差（`x_d - x_actual`、`y_d - y_actual`）经`theta phi 期望值计算`函数转换为期望姿态角（`phi_d` 滚转角、`theta_d` 俯仰角）。
 -   ​**函数核心公式**​（简化版）：
@@ -179,17 +179,17 @@ $$
 
 ###  ​2、 姿态控制模块​
 
-#### （1）输入信号​
+#### 1. 输入信号​
 
 -   ​**期望姿态角**​：`phi_d`（滚转）、`theta_d`（俯仰）、`psi_d`（偏航）。
 -   ​**当前姿态角**​：`phi`、`theta`、`psi`（来自传感器反馈）。
 
-#### ​（2）姿态角误差计算
+#### ​2. 姿态角误差计算
 
 -   ​**功能**​：计算姿态角误差（如 `phi_d - phi`），驱动PID控制器生成力矩`M`
 -   ​**算法**​：PID控制算法，抑制姿态振荡并快速跟踪期望角。
 
-#### ​（3）力矩生成​
+#### ​3. 力矩生成​
 
 -   ​**输出力矩**​：`Mx`（滚转力矩）、`My`（俯仰力矩）、`Mz`（偏航力矩）。
 -   ​**物理原理**​：
@@ -200,13 +200,13 @@ $$
 
 ### ​ 3、限幅模块​
 
-#### ​（1）推力限幅
+#### ​1. 推力限幅
 
 -   ​**位置**​：位置控制模块（高度控制）输出端（推力 `F`）。
 -   ​**作用**​：限制推力在电机物理极限范围内（ F_min ≤ F ≤ F_max）。
 -   ​**参数示例**​：若电机最大升力为5N，则限幅为 `0~20N`（四电机总和）。
 
-#### （2）力矩限幅​
+#### 2. 力矩限幅​
 
 -   ​**位置**​：姿态控制模块输出端（力矩 `Mx`、`My`、`Mz`）。
 -   ​**作用**​：确保力矩不超过电机扭矩和机臂结构强度限制。
@@ -216,7 +216,7 @@ $$
 
 ### ​ 4、关键模块交互逻辑​
 
-#### ​（1）数据流路径
+#### ​1. 数据流路径
 
 ```mermaid
    graph TD
@@ -230,7 +230,7 @@ $$
 
 -   ​**特点**​：内外环控制结构，外环位置控制环生成内环指令（推力与期望姿态），内环姿态控制环实现外环稳定与期望跟踪。
 
-#### ​（2）模块协同作用*
+#### ​模块协同作用*
 
 -   ​**位置控制**​：解决“飞到哪里”的问题，依赖姿态控制实现水平位移。
 -   ​**姿态控制**​：解决“如何稳定飞行”的问题，快速响应位置误差。
@@ -392,7 +392,7 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg2MzkzOTkwOSwtNTMxOTc5MjI5LDEwND
+eyJoaXN0b3J5IjpbLTYxNzAyODU0NywtNTMxOTc5MjI5LDEwND
 M4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEy
 MzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMj
 MxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3
