--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -230,7 +230,7 @@ $$
 
 -   ​**特点**​：内外环控制结构，外环位置控制环生成内环指令（推力与期望姿态），内环姿态控制环实现外环稳定与期望跟踪。
 
-#### ​模块协同作用*
+#### ​2. 模块协同作用*
 
 -   ​**位置控制**​：解决“飞到哪里”的问题，依赖姿态控制实现水平位移。
 -   ​**姿态控制**​：解决“如何稳定飞行”的问题，快速响应位置误差。
@@ -240,19 +240,19 @@ $$
 
 ### ​ 5、总结  核心设计思想​
 
-#### ​（1）内外环控制架构
+#### ​1. 内外环控制架构
 
 -   ​**优势**​：解耦位置与姿态控制，降低系统复杂度。
 -   ​**典型应用**​：
     -   定高飞行时，`z_d`固定，`phi_d`/`theta_d`由轨迹生成器输入。
     -   轨迹跟踪时，`x_d`/`y_d`动态变化，位置控制实时解算姿态角需求。
 
-#### ​​（2）姿态角生成逻辑
+#### ​​2. 姿态角生成逻辑
 
 -   ​**X/Y轴位置误差→姿态角**​：通过调整滚转/俯仰角，将旋翼推力分解为水平力，实现平移运动。
 -   ​**示例**​：若需向右移动（增大 `x_d`），位置控制增大 `theta_d`（俯仰角），无人机前倾，推力水平分量驱动右移。
 
-#### ​（3）限幅的必要性​
+#### ​3. 限幅的必要性​
 
 -   ​**电机保护**​：防止指令超出电机最大转速或扭矩。
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
@@ -263,7 +263,7 @@ $$
 
 ###  1. 模型整体架构​
 
-#### ​(1) 模型名称与层级结构​
+#### 1. 模型名称与层级结构​
 
 -   ​**模型路径**​：`quadrotor3_8shape/三维四旋翼动态系统`
     -   ​**顶层模型**​：包含输入/输出接口、核心动力学模块（`quadrotor3_system`）及信号传递模块
@@ -392,7 +392,7 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYxNzAyODU0NywtNTMxOTc5MjI5LDEwND
+eyJoaXN0b3J5IjpbLTYyODQ5MDU2MCwtNTMxOTc5MjI5LDEwND
 M4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEy
 MzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMj
 MxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3
