四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -261,7 +261,7 @@ $$
 
 ![三维四旋翼动态系统](/imgs/2025-05-12/JVphHuVqSuXr8XaM.png '三维四旋翼动态系统')
 
-###  1. 模型整体架构​
+###  1、 模型整体架构​
 
 #### 1. 模型名称与层级结构​
 
@@ -269,7 +269,7 @@ $$
     -   ​**顶层模型**​：包含输入/输出接口、核心动力学模块（`quadrotor3_system`）及信号传递模块
     -   ​**子模块**​：包含四旋翼动力学方程、PID控制器、姿态解算、信号传递等细节
 
-#### ​(2) 主要模块分布​
+#### ​2. 主要模块分布​
 
 -   ​**左侧输入**​：由PID控制器得到的输入信号 推力 `F` 和力矩 `M` 
 -   ​**中央核心**​：`quadrotor3_system`（四旋翼动力学模型）。
@@ -279,15 +279,15 @@ $$
 
 ----------
 
-### ​2. 输入模块解析
+### ​2、输入模块解析
 
-#### ​​(1) 推力输入 `F`​
+#### ​​1. 推力输入 `F`​
 
 -   ​**作用**​：输入四旋翼的总垂直推力，通常由高度控制模块经PID算法计算生成
 -   ​**物理意义**​：控制无人机的升降运动（Z轴方向）
 -   ​**信号流向**​：`F` → `quadrotor3_system` → 影响无人机垂直加速度
 
-#### ​​(2) 力矩输入 `M`​
+#### ​​2.  力矩输入 `M`​
 
 -   ​**作用**​：输入三轴力矩（滚转、俯仰、偏航），通常由姿态环控制器生成
 -   ​**物理意义**​：
@@ -298,9 +298,9 @@ $$
 
 ----------
 
-### ​3. 核心模块 quadrotor3_system详解
+### ​3、核心模块 quadrotor3_system详解
 
-#### ​**​(1) 功能概述**​
+#### ​1. 功能概述​
 
 -   ​**动力学模型**​：基于牛顿-欧拉方程，模拟四旋翼的六自由度运动（3个平移自由度 + 3个旋转自由度）。其核心作用是将输入的`推力F​​`和`​力矩M`转换为无人机的运动状态，包括位置、速度、姿态角和角速度
 -   ​**输入输出关系**​：
@@ -311,7 +311,7 @@ $$
         -   ​**姿态角**​：`phi`（滚转）、`theta`（俯仰）、`psi`（偏航）。
         -   ​**角速度**​：`p, q, r`（绕X/Y/Z轴的角速度）。
 
-#### ​(2) 内部逻辑
+#### ​2. 内部逻辑
 
 1.  ​**推力分配**​：将总推力 `F` 分配到四个电机
 2.  ​**力矩计算**​：根据姿态期望与实际差生成三轴力矩 `M`。
@@ -322,7 +322,7 @@ $$
 
 ----------
 
-### ​4. 输出模块解析
+### ​4.、输出模块解析
 
 #### ​(1) QuadrotorState (send state)​
 
@@ -392,9 +392,9 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYyODQ5MDU2MCwtNTMxOTc5MjI5LDEwND
-M4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEy
-MzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMj
-MxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3
-NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbLTE2OTYxNTkzNzAsLTUzMTk3OTIyOSwxMD
+QzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIx
+MjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLT
+IzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDky
+NzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
