--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -257,6 +257,7 @@ $$
 -   ​**电机保护**​：防止指令超出电机最大转速或扭矩。
 -   ​**稳定性保障**​：避免因指令突变导致姿态失稳或振荡。
 
+
 ### 五、三维四旋翼动态系统
 
 ![三维四旋翼动态系统](/imgs/2025-05-12/JVphHuVqSuXr8XaM.png '三维四旋翼动态系统')
@@ -322,9 +323,9 @@ $$
 
 ----------
 
-### ​4.、输出模块解析
+### ​4、输出模块解析
 
-#### ​(1) QuadrotorState (send state)​
+#### ​1. QuadrotorState (send state)​
 
 -   ​**作用**​：输出无人机的完整状态信息，供其他子系统（如PID控制器、可视化模块）使用
 -   ​**输出信号**​：
@@ -332,7 +333,7 @@ $$
     -   ​**姿态**​：`phi, theta, psi`（欧拉角形式）
     -   ​**速度**​：`dx, dy, dz`（线速度）和 `p, q, r`（角速度）
 
-#### ​(2) state 和 out_state​
+#### ​2. state 和 out_state​
 
 -   ​**作用**​：将关键状态信号单独输出，用于实时监控或记录。
 -   ​**典型用途**​：
@@ -341,21 +342,21 @@ $$
 
 ----------
 
-### ​5. 信号标签与连接逻辑​
+### ​5、 信号标签与连接逻辑​
 
-#### ​(1) 输入信号线​
+#### ​1. 输入信号线​
 
 -   ​**F**​：总推力输入，直接作用于四旋翼的垂直运动。
 -   ​**M**​：三轴力矩输入，驱动无人机的滚转、俯仰、偏航运动。
 
-#### ​​(2) 输出信号线​
+#### ​​2. 输出信号线​
 
 -   ​**x, y, z**​：无人机在三维空间中的位置坐标。
 -   ​**dx, dy, dz**​：三轴线速度（位置的一阶导数）
 -   ​**phi, theta, psi**​：滚转、俯仰、偏航角
 -   ​**p, q, r**​：绕X/Y/Z轴的角速度（角度位置的一阶导数）
 
-#### ​​(3) 反馈回路​
+#### ​​3. 反馈回路​
 
 -   ​**状态反馈**​：输出信号（如姿态角、位置）可能通过外部控制器（如PID模块）生成新的 `F` 和 `M`，形成闭环控制。
     
@@ -392,7 +393,7 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2OTYxNTkzNzAsLTUzMTk3OTIyOSwxMD
+eyJoaXN0b3J5IjpbLTIwNTg5MjU0MjYsLTUzMTk3OTIyOSwxMD
 QzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIx
 MjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLT
 IzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDky
