四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -295,7 +295,7 @@ $$
     -   ​**滚转力矩（M_phi）​**​：控制无人机绕X轴旋转（左右倾斜）
     -   ​**俯仰力矩（M_theta）​**​：控制无人机绕Y轴旋转（前后倾斜）
     -   ​**偏航力矩（M_psi）​**​：控制无人机绕Z轴旋转（左右转向）
--   ​**信号流向**​：`M` → `quadrotor3_system` → 影响无人机角加速度
+-   ​**信号流向**​：`力矩M` → `quadrotor3_system` → 影响无人机角加速度 → 姿态控制
 
 ----------
 
@@ -393,9 +393,9 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNTg5MjU0MjYsLTUzMTk3OTIyOSwxMD
-QzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIx
-MjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLT
-IzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDky
-NzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbMTA1MTEzNzc3OSwtNTMxOTc5MjI5LDEwND
+M4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEy
+MzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMj
+MxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3
+NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
 -->
