四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -329,7 +329,7 @@ $$
 
 -   ​**作用**​：输出无人机的完整状态信息，供其他子系统（如PID控制器、可视化模块）使用
 -   ​**输出信号**​：
-    -   ​**位置**​：`x, y, z`（可能包含世界坐标系或机体坐标系数据）
+    -   ​**位置**​：`x, y, z`（包含世界坐标系数据）
     -   ​**姿态**​：`phi, theta, psi`（欧拉角形式）
     -   ​**速度**​：`dx, dy, dz`（线速度）和 `p, q, r`（角速度）
 
@@ -393,9 +393,9 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA1MTEzNzc3OSwtNTMxOTc5MjI5LDEwND
-M4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEy
-MzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMj
-MxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3
-NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbLTEzMzA0ODU1MTAsLTUzMTk3OTIyOSwxMD
+QzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIx
+MjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLT
+IzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDky
+NzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
