四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -360,9 +360,16 @@ $$
 
 -   ​**状态反馈**​：输出信号（如姿态角、位置）可能通过外部控制器（如PID模块）生成新的 `F` 和 `M`，形成闭环控制。
     
-    ```markdown
     z（实际高度） → PID控制器 → F（推力修正） → quadrotor3_system → z（更新高度）
-    ```
+ ```mermaid
+   graph TD
+    A[z 实际高度] --> |位置控制|B
+    B[推力F, 姿态角phi_d/theta_d]
+    C --> |姿态控制|E
+    E[力矩Mx/My/Mz]
+    E --> |限幅|G
+	G[输出 out.input]
+```
     
 
 
@@ -393,9 +400,10 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMzA0ODU1MTAsLTUzMTk3OTIyOSwxMD
-QzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIx
-MjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLT
-IzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDky
-NzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbMTAxNDE0MDI0MCwtMTMzMDQ4NTUxMCwtNT
+MxOTc5MjI5LDEwNDM4NDMyNCwxMjk2OTU3MTEwLDEyMTE5Nzkw
+MTcsLTE1ODE1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMT
+Q1ODQ3MzI5OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2
+NTMyLC0xOTU0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ
+==
 -->
