--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -363,10 +363,10 @@ $$
     z（实际高度） → PID控制器 → F（推力修正） → quadrotor3_system → z（更新高度）
  ```mermaid
    graph TD
-    A[z 实际高度] --> |位置控制|B
-    B[推力F, 姿态角phi_d/theta_d]
-    C --> |姿态控制|E
-    E[力矩Mx/My/Mz]
+    A[z（实际高度）] -->B
+    B[PID控制器]
+    B --> |姿态控制|E
+    E[F（推力修正）]
     E --> |限幅|G
 	G[输出 out.input]
 ```
@@ -400,10 +400,10 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAxNDE0MDI0MCwtMTMzMDQ4NTUxMCwtNT
-MxOTc5MjI5LDEwNDM4NDMyNCwxMjk2OTU3MTEwLDEyMTE5Nzkw
-MTcsLTE1ODE1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMT
-Q1ODQ3MzI5OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2
-NTMyLC0xOTU0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ
-==
+eyJoaXN0b3J5IjpbLTE3NTQxMDYzMTYsLTEzMzA0ODU1MTAsLT
+UzMTk3OTIyOSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5
+MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LD
+E0NTg0NzMyOTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2
+NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX
+0=
 -->
