四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -365,10 +365,11 @@ $$
    graph TD
     A[z（实际高度）] -->B
     B[PID控制器]
-    B --> |姿态控制|E
-    E[F（推力修正）]
-    E --> |限幅|G
-	G[输出 out.input]
+    B --> C
+    C[F（推力修正）]
+    C --> D
+	D[quadrotor3_system]
+	D --> |更新高度|A
 ```
     
 
@@ -400,10 +401,9 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NTQxMDYzMTYsLTEzMzA0ODU1MTAsLT
-UzMTk3OTIyOSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5
-MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LD
-E0NTg0NzMyOTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2
-NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX
-0=
+eyJoaXN0b3J5IjpbMjQzNTUzOTIyLC0xMzMwNDg1NTEwLC01Mz
+E5NzkyMjksMTA0Mzg0MzI0LDEyOTY5NTcxMTAsMTIxMTk3OTAx
+NywtMTU4MTUyMTIzOCwtOTkyOTczNjcwLDM1NTAwNTQ1OCwxND
+U4NDczMjk4LC0yMzEzMjUzMDUsODY4MzMzMTc5LC05MDk3NjY1
+MzIsLTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxODc4OTAwMV19
 -->
