四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -371,7 +371,9 @@ $$
 	D[quadrotor3_system]
 	D --> |更新高度|A
 	E[姿态角（phi、theta、psi）] --> B
-	
+	B --> F[M（力矩修正）]
+	F --> D
+	D --> ||
 ```
     
 
@@ -403,9 +405,10 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTc5MTczNTIzLC0xMzMwNDg1NTEwLC01Mz
-E5NzkyMjksMTA0Mzg0MzI0LDEyOTY5NTcxMTAsMTIxMTk3OTAx
-NywtMTU4MTUyMTIzOCwtOTkyOTczNjcwLDM1NTAwNTQ1OCwxND
-U4NDczMjk4LC0yMzEzMjUzMDUsODY4MzMzMTc5LC05MDk3NjY1
-MzIsLTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxODc4OTAwMV19
+eyJoaXN0b3J5IjpbLTQwODMwOTY4OCwtMTMzMDQ4NTUxMCwtNT
+MxOTc5MjI5LDEwNDM4NDMyNCwxMjk2OTU3MTEwLDEyMTE5Nzkw
+MTcsLTE1ODE1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMT
+Q1ODQ3MzI5OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2
+NTMyLC0xOTU0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ
+==
 -->
