四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -378,6 +378,34 @@ $$
     
 
 
+
+```mermaid
+graph TD
+    A[z(实际高度)] --> B[PID控制器]
+    B --> C[F(推力修正)]
+    C --> D[quadrotor3_system]
+    D -->|更新高度| A
+    E[姿态角(phi, theta, psi)] --> B
+    B --> F[M(力矩修正)]
+    F --> D
+    D -->|更新姿态| E
+
+    style A fill:#f9f9f9,stroke:#333,stroke-width:2px
+    style B fill:#f0f8ff,stroke:#333,stroke-width:2px
+    style C fill:#f0f8ff,stroke:#333,stroke-width:2px
+    style D fill:#f9f9f9,stroke:#333,stroke-width:2px
+    style E fill:#f9f9f9,stroke:#333,stroke-width:2px
+    style F fill:#f0f8ff,stroke:#333,stroke-width:2px
+
+    A --> B: 1
+    B --> C: 2
+    C --> D: 3
+    D --> A: 4
+    E --> B: 5
+    B --> F: 6
+    F --> D: 7
+    D --> E: 8
+    ```
 ----------
 
 ### ​**7. 系统运行流程总结**​
@@ -405,10 +433,10 @@ $$
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU4NDIzMzMwMywtMTMzMDQ4NTUxMCwtNT
-MxOTc5MjI5LDEwNDM4NDMyNCwxMjk2OTU3MTEwLDEyMTE5Nzkw
-MTcsLTE1ODE1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMT
-Q1ODQ3MzI5OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2
-NTMyLC0xOTU0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ
-==
+eyJoaXN0b3J5IjpbMTY3NTE4MTQzMiwxNTg0MjMzMzAzLC0xMz
+MwNDg1NTEwLC01MzE5NzkyMjksMTA0Mzg0MzI0LDEyOTY5NTcx
+MTAsMTIxMTk3OTAxNywtMTU4MTUyMTIzOCwtOTkyOTczNjcwLD
+M1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMzEzMjUzMDUsODY4MzMz
+MTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLT
+QxODc4OTAwMV19
 -->
