--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -381,30 +381,15 @@ $$
 
 ```mermaid
 graph TD
-  %%{init: {'themeVariables': { 'darkMode': true}}}%%
-flowchart TD
-    subgraph 控制模块
-        A[z(实际高度)] --> B[PID控制器]
-        B -->|推力修正| C[F↓]
-        B -->|力矩修正| D[M↻]
-    end
-    
-    subgraph 系统模型
-        C & D --> E[quadrotor3_system]
-        E --> F[更新姿态]
-        F --> G[姿态角（phi,theta,psi）]
-    end
-    
-    G -->|高度反馈| A
-    F --> H[升高高度]
-    
-    classDef control fill:#4a90e2,stroke:#fff;      %% 蓝色控制模块
-    classDef system fill:#50e3c2,stroke:#fff;      %% 绿色系统模型
-    classDef feedback stroke:#ff7f0e,stroke-dasharray:5; %% 橙色反馈线
-    
-    class 控制模块 control
-    class 系统模型 system
-    linkStyle 6 feedback
+    A[z（实际高度）] --> B(PID控制器)
+    B --> C[F（推力修正）]
+    B --> F[M（力矩修正）]
+    C --> D[quadrotor3_system]
+    F --> D
+    D --> A
+    D --> E[姿态角（phi、theta、psi）]
+    E --> B
+
     ```
 ----------
 
@@ -433,10 +418,10 @@ flowchart TD
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTExOTMzNjcxLDE1ODQyMzMzMDMsLTEzMz
-A0ODU1MTAsLTUzMTk3OTIyOSwxMDQzODQzMjQsMTI5Njk1NzEx
-MCwxMjExOTc5MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2NzAsMz
-U1MDA1NDU4LDE0NTg0NzMyOTgsLTIzMTMyNTMwNSw4NjgzMzMx
-NzksLTkwOTc2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtND
-E4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbMTIzOTkzMDA4NSwxNTg0MjMzMzAzLC0xMz
+MwNDg1NTEwLC01MzE5NzkyMjksMTA0Mzg0MzI0LDEyOTY5NTcx
+MTAsMTIxMTk3OTAxNywtMTU4MTUyMTIzOCwtOTkyOTczNjcwLD
+M1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMzEzMjUzMDUsODY4MzMz
+MTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLT
+QxODc4OTAwMV19
 -->
