四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -360,24 +360,7 @@ $$
 
 -   ​**状态反馈**​：输出信号（如姿态角、位置）可能通过外部控制器（如PID模块）生成新的 `F` 和 `M`，形成闭环控制。
     
-    z（实际高度） → PID控制器 → F（推力修正） → quadrotor3_system → z（更新高度）
- ```mermaid
-   graph TD
-    A[z（实际高度）] -->B
-    B[PID控制器]
-    B --> C
-    C[F（推力修正）]
-    C --> D
-	D[quadrotor3_system]
-	D --> |更新高度|A
-	E[姿态角（phi、theta、psi）] --> B
-	B --> F[M（力矩修正）]
-	F --> D
-	D --> |更新姿态|E
-```
-    
-
-
+ 
 
 ```mermaid
 graph TD
@@ -389,8 +372,19 @@ graph TD
     D --> A
     D --> E[姿态角（phi、theta、psi）]
     E --> B
-
-    ```
+    style A fill:#f9f,color:#333,stroke:#333,stroke-width:2px
+    style B fill:#bbf,color:#333,stroke:#333,stroke-width:2px
+    style C fill:#f9f,color:#333,stroke:#333,stroke-width:2px
+    style D fill:#f9f,color:#333,stroke:#333,stroke-width:2px
+    style E fill:#f9f,color:#333,stroke:#333,stroke-width:2px
+    style F fill:#f9f,color:#333,stroke:#333,stroke-width:2px
+    linkStyle 0 stroke:#333,stroke-width:2px,color:#333
+    linkStyle 1 stroke:#333,stroke-width:2px,color:#333
+    linkStyle 2 stroke:#333,stroke-width:2px,color:#333
+    linkStyle 3 stroke:#333,stroke-width:2px,color:#333
+    linkStyle 4 stroke:#333,stroke-width:2px,color:#333
+    linkStyle 5 stroke:#333,stroke-width:2px,color:#333
+   ```
 ----------
 
 ### ​**7. 系统运行流程总结**​
@@ -418,10 +412,10 @@ graph TD
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIzOTkzMDA4NSwxNTg0MjMzMzAzLC0xMz
-MwNDg1NTEwLC01MzE5NzkyMjksMTA0Mzg0MzI0LDEyOTY5NTcx
-MTAsMTIxMTk3OTAxNywtMTU4MTUyMTIzOCwtOTkyOTczNjcwLD
-M1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMzEzMjUzMDUsODY4MzMz
-MTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLT
-QxODc4OTAwMV19
+eyJoaXN0b3J5IjpbNjA4MzMzMzMwLDE1ODQyMzMzMDMsLTEzMz
+A0ODU1MTAsLTUzMTk3OTIyOSwxMDQzODQzMjQsMTI5Njk1NzEx
+MCwxMjExOTc5MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2NzAsMz
+U1MDA1NDU4LDE0NTg0NzMyOTgsLTIzMTMyNTMwNSw4NjgzMzMx
+NzksLTkwOTc2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtND
+E4Nzg5MDAxXX0=
 -->
