四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -364,15 +364,26 @@ $$
 
 ```mermaid
 graph TD
-
-    A[z(实际高度)] --> B[PID控制器]
-    B --> C[F(推力修正)]
+    A[z（实际高度）] --> B(PID控制器)
+    B --> C[F（推力修正）]
+    B --> F[M（力矩修正）]
     C --> D[quadrotor3_system]
-    D -->|更新高度| A
-    E[姿态角(phi, theta, psi)] --> B
-    B --> F[M(力矩修正)]
     F --> D
-    D -->|更新姿态| E
+    D --> A
+    D --> E[姿态角（phi、theta、psi）]
+    E --> B
+    style A fill:#f9f,color:#333,stroke:#333,stroke-width:2px
+    style B fill:#bbf,color:#333,stroke:#333,stroke-width:2px
+    style C fill:#f9f,color:#333,stroke:#333,stroke-width:2px
+    style D fill:#bbf,color:#333,stroke:#333,stroke-width:2px
+    style E fill:#f9f,color:#333,stroke:#333,stroke-width:2px
+    style F fill:#f9f,color:#333,stroke:#333,stroke-width:2px
+    linkStyle 0 stroke:#333,stroke-width:2px,color:#333
+    linkStyle 1 stroke:#333,stroke-width:2px,color:#333
+    linkStyle 2 stroke:#333,stroke-width:2px,color:#333
+    linkStyle 3 stroke:#333,stroke-width:2px,color:#333
+    linkStyle 4 stroke:#333,stroke-width:2px,color:#333
+    linkStyle 5 stroke:#333,stroke-width:2px,color:#333
 ```
 ----------
 
@@ -401,7 +412,7 @@ graph TD
 
 该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM1ODYwMTk2Niw2MDgzMzMzMzAsMTU4ND
+eyJoaXN0b3J5IjpbMTg3NDc4MjM0MSw2MDgzMzMzMzAsMTU4ND
 IzMzMwMywtMTMzMDQ4NTUxMCwtNTMxOTc5MjI5LDEwNDM4NDMy
 NCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEyMzgsLT
 k5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMjMxMzI1
