四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -385,32 +385,16 @@ graph TD
 ```
 ----------
 
-### ​**7. 系统运行流程总结**​
 
-1.  ​**输入生成**​：
-    -   外部控制器（如PID）或手动输入生成推力 `F` 和力矩 `M`。
-2.  ​**动力学计算**​：
-    -   `quadrotor3_system` 根据输入计算无人机的位置、姿态、速度等状态。
-3.  ​**状态反馈**​：
-    -   输出信号 `x, y, z, phi, theta, psi` 等反馈给控制器，形成闭环。
-4.  ​**可视化与调试**​：
-    -   通过示波器或信号表观察误差收敛性、稳定性等性能指标。
-
-----------
-
-### ​**8. 典型应用场景**​
+### ​6、典型应用场景
 
 1.  ​**悬停控制**​：通过PID调节 `F` 保持高度，调节 `M` 维持姿态稳定。
-2.  ​**轨迹跟踪**​：给定 `x_d(t), y_d(t), z_d(t)`，通过位置-姿态耦合控制实现三维路径跟踪。
+2.  ​**轨迹跟踪**​：给定 `x_d(t), y_d(t), z_d(t)`，通过位置-姿态耦合控制实现8字形三维路径跟踪。
 3.  ​**抗风扰测试**​：注入外部力干扰，验证控制器的鲁棒性。
 
-----------
 
-### ​**总结**​
-
-该模型完整实现了四旋翼无人机的动力学仿真框架，通过 `F` 和 `M` 的输入驱动运动，通过状态反馈形成闭环控制。核心模块 `quadrotor3_system` 承担了物理规律的计算任务，而输入输出接口则为算法设计者提供了灵活的调试和扩展能力。理解此模型的结构是开发自主飞行控制算法的基础。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgzMzMxNTYwMiw2MDgzMzMzMzAsMTU4ND
+eyJoaXN0b3J5IjpbLTc5NjE1Mzk5OCw2MDgzMzMzMzAsMTU4ND
 IzMzMwMywtMTMzMDQ4NTUxMCwtNTMxOTc5MjI5LDEwNDM4NDMy
 NCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEyMzgsLT
 k5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMjMxMzI1
