四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -142,7 +142,7 @@ $$
 
 	-   ​**功能**：将 `x_d`、`y_d`、`z_d`、`psi_d` 四个信号封装为复合输出信号。
 	-   ​**接口形式**：通常为`To Workspace`，供之后飞控系统（PID控制器）同步读取四自由度期望值。
-
+---
 ### 四、PID控制器
 
 ![PID控制器](/imgs/2025-05-12/0lHoYvS2cMGYWxZe.png 'PID控制器')
@@ -388,7 +388,7 @@ graph TD
 ----------
 
 
-### ​6、典型应用场景
+### ​6、实际应用场景
 
 1.  ​**悬停控制**​：通过PID调节 `F` 保持高度，调节 `M` 维持姿态稳定。
 2.  ​**轨迹跟踪**​：给定 `x_d(t), y_d(t), z_d(t)`，通过位置-姿态耦合控制实现8字形三维路径跟踪。
@@ -396,10 +396,10 @@ graph TD
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MzMyMDM0MDIsNjA4MzMzMzMwLDE1OD
-QyMzMzMDMsLTEzMzA0ODU1MTAsLTUzMTk3OTIyOSwxMDQzODQz
-MjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNTgxNTIxMjM4LC
-05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMyOTgsLTIzMTMy
-NTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMTk1NDkyNzYsMT
-M5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbOTc0ODQzOTYzLDYwODMzMzMzMCwxNTg0Mj
+MzMzAzLC0xMzMwNDg1NTEwLC01MzE5NzkyMjksMTA0Mzg0MzI0
+LDEyOTY5NTcxMTAsMTIxMTk3OTAxNywtMTU4MTUyMTIzOCwtOT
+kyOTczNjcwLDM1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMzEzMjUz
+MDUsODY4MzMzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOT
+M2NzgwNzQsLTQxODc4OTAwMV19
 -->
