四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -322,7 +322,9 @@ $$
     -   ​**平移运动**​：`m * [dx; dy; dz] = [0; 0; F] - m * g * [0; 0; 1]`（考虑重力）。
     -   ​**旋转运动**​：`I * [dp; dq; dr] = M - cross([p; q; r], I * [p; q; r])`（欧拉方程，`I` 为转动惯量矩阵）。
 4.  ​**姿态解算**​：通过角速度积分或四元数更新计算 `phi, theta, psi`。
-
+5. *坐标系转换​
+​机体坐标系 → 世界坐标系​：
+使用旋转矩阵（或四元数）将机体坐标系下的加速度转换到世界坐标系
 ----------
 
 ### ​4、输出模块解析
@@ -396,10 +398,10 @@ graph TD
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTc0ODQzOTYzLDYwODMzMzMzMCwxNTg0Mj
-MzMzAzLC0xMzMwNDg1NTEwLC01MzE5NzkyMjksMTA0Mzg0MzI0
-LDEyOTY5NTcxMTAsMTIxMTk3OTAxNywtMTU4MTUyMTIzOCwtOT
-kyOTczNjcwLDM1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMzEzMjUz
-MDUsODY4MzMzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOT
-M2NzgwNzQsLTQxODc4OTAwMV19
+eyJoaXN0b3J5IjpbLTkwMzMwMTcwNiw5NzQ4NDM5NjMsNjA4Mz
+MzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1MTAsLTUzMTk3OTIy
+OSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNT
+gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
+OTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMT
+k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
