四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -322,9 +322,7 @@ $$
     -   ​**平移运动**​：`m * [dx; dy; dz] = [0; 0; F] - m * g * [0; 0; 1]`（考虑重力）。
     -   ​**旋转运动**​：`I * [dp; dq; dr] = M - cross([p; q; r], I * [p; q; r])`（欧拉方程，`I` 为转动惯量矩阵）。
 4.  ​**姿态解算**​：通过角速度积分或四元数更新计算 `phi, theta, psi`。
-5. *坐标系转换​
-​机体坐标系 → 世界坐标系​：
-使用旋转矩阵（或四元数）将机体坐标系下的加速度转换到世界坐标系
+5. **坐标系转换​**：使用旋转矩阵（或四元数）将机体坐标系下的加速度转换到世界坐标系
 ----------
 
 ### ​4、输出模块解析
@@ -398,7 +396,7 @@ graph TD
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkwMzMwMTcwNiw5NzQ4NDM5NjMsNjA4Mz
+eyJoaXN0b3J5IjpbLTkzMjkzNDcyNSw5NzQ4NDM5NjMsNjA4Mz
 MzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1MTAsLTUzMTk3OTIy
 OSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNT
 gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
