四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -317,11 +317,11 @@ $$
 #### ​2. 内部逻辑
 
 1.  ​**推力分配**​：将总推力 `F` 分配到四个电机
-2.  ​**力矩计算**​：根据姿态期望与实际差生成三轴力矩 `M`。
+2.  ​**力矩计算**​：根据姿态期望与实际差生成三轴力矩 `M`
 3.  ​**运动方程**​：
-    -   ​**平移运动**​：`m * [dx; dy; dz] = [0; 0; F] - m * g * [0; 0; 1]`（考虑重力）。
-    -   ​**旋转运动**​：`I * [dp; dq; dr] = M - cross([p; q; r], I * [p; q; r])`（欧拉方程，`I` 为转动惯量矩阵）。
-4.  ​**姿态解算**​：通过角速度积分或四元数更新计算 `phi, theta, psi`。
+    -   ​**平移运动**​：`m * [dx; dy; dz] = [0; 0; F] - m * g * [0; 0; 1]`（考虑重力）
+    -   ​**旋转运动**​：`I * [dp; dq; dr] = M - cross([p; q; r], I * [p; q; r])`（欧拉方程，`I` 为转动惯量矩阵）
+4.  ​**姿态解算**​：通过角速度积分或四元数更新计算 `phi, theta, psi`
 5. **坐标系转换​**：使用旋转矩阵（或四元数）将机体坐标系下的加速度转换到世界坐标系
 ----------
 
@@ -394,9 +394,9 @@ graph TD
 2.  ​**轨迹跟踪**​：给定 `x_d(t), y_d(t), z_d(t)`，通过位置-姿态耦合控制实现8字形三维路径跟踪。
 3.  ​**抗风扰测试**​：注入外部力干扰，验证控制器的鲁棒性。
 
-
+---
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkzMjkzNDcyNSw5NzQ4NDM5NjMsNjA4Mz
+eyJoaXN0b3J5IjpbLTY5MzI4MTg2OCw5NzQ4NDM5NjMsNjA4Mz
 MzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1MTAsLTUzMTk3OTIy
 OSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNT
 gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
