四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -277,7 +277,7 @@ $$
 -   ​**左侧输入**​：由PID控制器得到的输入信号 推力 `F` 和力矩 `M` 
 -   ​**中央核心**​：`quadrotor3_system`（四旋翼动力学模型）。
 -   ​**右侧输出**​：
-    -   `QuadrotorState (send state)`：发送无人机完整状态（位置、姿态、速度等）。
+    -   `QuadrotorState (send state)`：将无人机完整状态（位置、姿态、速度等）发送给PID控制器
     -   `state` 和 `out_state`：状态信号输出接口，用于数据记录与外部控制。
 
 ----------
@@ -395,11 +395,12 @@ graph TD
 3.  ​**抗风扰测试**​：注入外部力干扰，验证控制器的鲁棒性。
 
 ---
+### 六、
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY5MzI4MTg2OCw5NzQ4NDM5NjMsNjA4Mz
-MzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1MTAsLTUzMTk3OTIy
-OSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNT
-gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
-OTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMT
-k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbMzU4NzY5NDkyLDk3NDg0Mzk2Myw2MDgzMz
+MzMzAsMTU4NDIzMzMwMywtMTMzMDQ4NTUxMCwtNTMxOTc5MjI5
+LDEwNDM4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1OD
+E1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5
+OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOT
+U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
 -->
