四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -395,12 +395,13 @@ graph TD
 3.  ​**抗风扰测试**​：注入外部力干扰，验证控制器的鲁棒性。
 
 ---
-### 六、
+### 六、绘制二维四旋翼视觉跟踪代码实现
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzU4NzY5NDkyLDk3NDg0Mzk2Myw2MDgzMz
-MzMzAsMTU4NDIzMzMwMywtMTMzMDQ4NTUxMCwtNTMxOTc5MjI5
-LDEwNDM4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1OD
-E1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5
-OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOT
-U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbLTE3ODI0NTY2OTQsOTc0ODQzOTYzLDYwOD
+MzMzMzMCwxNTg0MjMzMzAzLC0xMzMwNDg1NTEwLC01MzE5Nzky
+MjksMTA0Mzg0MzI0LDEyOTY5NTcxMTAsMTIxMTk3OTAxNywtMT
+U4MTUyMTIzOCwtOTkyOTczNjcwLDM1NTAwNTQ1OCwxNDU4NDcz
+Mjk4LC0yMzEzMjUzMDUsODY4MzMzMTc5LC05MDk3NjY1MzIsLT
+E5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxODc4OTAwMV19
 -->
