--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -405,21 +405,18 @@ graph TD
 function draw_quadrotor_3D_1(t, position, angle, orientation, traj)
 % 输入参数：
 % t: 时间 [n*1]
-% position: 四旋翼(x,y,z)位置 [n*3]
+% position: 四旋翼三维位置坐标 [n*3，x,y,z]
 % angle：四旋翼(phi, theta, psi)欧拉角 [n*3]
 % orientation: 建模时z轴的正方向：值为1表示z轴向上; 值为0表示z轴向下
 % traj: (x,y,z)参考轨迹 [n*3]
+
 %% 坐标属性设置
 fig = figure('Name','3D_Drone','Position',[500 250 650 400]);
-
 ax = axes;
-
 axis equal;
 
 if nargin < 4
-
 fprintf(" 输入参数：\n\t t: 时间[n*1]\n\t position: 四旋翼(x,y,z)位置 [n*3]\n");
-
 fprintf("\t angle：四旋翼(phi, theta, psi)欧拉角 [n*3]\n");
 
 fprintf("\t orientation: 建模时z轴的正方向：值为1表示z轴向上; 值为0表示z轴向下(默认)\n");
@@ -583,10 +580,10 @@ end
 end~~删除线文本~~
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODY0MzE3OTUzLDk3NDg0Mzk2Myw2MDgzMz
-MzMzAsMTU4NDIzMzMwMywtMTMzMDQ4NTUxMCwtNTMxOTc5MjI5
-LDEwNDM4NDMyNCwxMjk2OTU3MTEwLDEyMTE5NzkwMTcsLTE1OD
-E1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5
-OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOT
-U0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkwMDFdfQ==
+eyJoaXN0b3J5IjpbMTEwMjA3Nzg1Miw5NzQ4NDM5NjMsNjA4Mz
+MzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1MTAsLTUzMTk3OTIy
+OSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNT
+gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
+OTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMT
+k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
