--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -414,25 +414,19 @@ function draw_quadrotor_3D_1(t, position, angle, orientation, traj)
 fig = figure('Name','3D_Drone','Position',[500 250 650 400]);
 ax = axes;
 axis equal;
+%%三维窗口更大（650×400），且使用axis equal保持三轴比例一致
 
 if nargin < 4
 fprintf(" 输入参数：\n\t t: 时间[n*1]\n\t position: 四旋翼(x,y,z)位置 [n*3]\n");
 fprintf("\t angle：四旋翼(phi, theta, psi)欧拉角 [n*3]\n");
-
 fprintf("\t orientation: 建模时z轴的正方向：值为1表示z轴向上; 值为0表示z轴向下(默认)\n");
-
 fprintf("\t traj: (x,y,z)参考轨迹 [n*3]\n");
-
 return;
-
 end
 
 if orientation == 1
-
 position(:,2:3) = -position(:,2:3);
-
 angle = -angle;
-
 end
 
 if nargin > 4
@@ -580,7 +574,7 @@ end
 end~~删除线文本~~
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEwMjA3Nzg1Miw5NzQ4NDM5NjMsNjA4Mz
+eyJoaXN0b3J5IjpbMTg2ODA4ODkxOSw5NzQ4NDM5NjMsNjA4Mz
 MzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1MTAsLTUzMTk3OTIy
 OSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNT
 gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
