四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -428,27 +428,19 @@ if orientation == 1
 position(:,2:3) = -position(:,2:3);
 angle = -angle;
 end
+%%根据orientation调整坐标系方向
 
 if nargin > 4
-
 % 参考轨迹
-
 plot3(ax,traj(:,1),traj(:,2),traj(:,3),'--k','LineWidth',2);
-
 end
 
 x_lim_min = floor(min(position(:,1))) - 2;
-
 x_lim_max = ceil(max(position(:,1))) + 2;
-
 y_lim_min = floor(min(position(:,2))) - 2;
-
 y_lim_max = ceil(max(position(:,2))) + 2;
-
 z_lim_min = floor(min(position(:,3))) - 2;
-
 z_lim_max = ceil(max(position(:,3))) + 2;
-
 set(ax,'looseinset',get(ax,'tightinset'),'View',[-37.5,15],'Nextplot','add','Xgrid','on','Ygrid','on','Zgrid','on',...
 
 'XLim',[x_lim_min x_lim_max],'YLim',[y_lim_min y_lim_max],'ZLim',[z_lim_min z_lim_max],...
@@ -574,10 +566,10 @@ end
 end~~删除线文本~~
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg2ODA4ODkxOSw5NzQ4NDM5NjMsNjA4Mz
-MzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1MTAsLTUzMTk3OTIy
-OSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNT
-gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
-OTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMT
-k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbLTEwMDA0ODE0MjUsOTc0ODQzOTYzLDYwOD
+MzMzMzMCwxNTg0MjMzMzAzLC0xMzMwNDg1NTEwLC01MzE5Nzky
+MjksMTA0Mzg0MzI0LDEyOTY5NTcxMTAsMTIxMTk3OTAxNywtMT
+U4MTUyMTIzOCwtOTkyOTczNjcwLDM1NTAwNTQ1OCwxNDU4NDcz
+Mjk4LC0yMzEzMjUzMDUsODY4MzMzMTc5LC05MDk3NjY1MzIsLT
+E5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxODc4OTAwMV19
 -->
