四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -444,43 +444,26 @@ z_lim_max = ceil(max(position(:,3))) + 2;
 set(ax,'looseinset',get(ax,'tightinset'),'View',[-37.5,15],'Nextplot','add','Xgrid','on','Ygrid','on','Zgrid','on',...
 
 'XLim',[x_lim_min x_lim_max],'YLim',[y_lim_min y_lim_max],'ZLim',[z_lim_min z_lim_max],...
-
 'XTick',x_lim_min:1:x_lim_max,'YTick',y_lim_min:1:y_lim_max,'ZTick',z_lim_min:1:z_lim_max,...
-
 'ZDir','Reverse','YDir','Reverse');
-
 title(ax,'3D\_Quadrotor','Fontname', 'Times New Roman','FontSize',12);
-
 xlabel(ax,'x(m)','Fontname', 'Times New Roman','FontSize',12);
-
 ylabel(ax,'y(m)','Fontname', 'Times New Roman','FontSize',12);
-
 zlabel(ax,'z(m)','Fontname', 'Times New Roman','FontSize',12);
 
 % 实际轨迹属性
-
-line = plot3(ax,0,0,0,'-r','LineWidth',2); % 画四旋翼运动轨迹
-
+line = plot3(ax,0,0,0,'-r','LineWidth',2); % 画四旋翼三维运动轨迹
 %% 四旋翼属性
-
 ArmLength = 0.5;
-
 quadrotor_body = ...
-
 [ ArmLength, 0, 0, 1; ... % 1号电机
-
 0, ArmLength, 0, 1; ... % 2号电机
-
 -ArmLength, 0, 0, 1; ... % 3号电机
-
 0, -ArmLength, 0, 1; ... % 4号电机
-
 0, 0, 0, 1; ... % 中心位置
-
 0, 0, -0.2, 1]'; % 类似于接收器的装备
 
 %% 画四旋翼结构
-
 h1 = plot3(ax, 0, 0, 0, '-bo', 'MarkerSize', 6, 'LineWidth', 1, 'MarkerFaceColor','red', 'MarkerEdgeColor', 'red'); % x轴机臂和1、3号电机
 
 h2 = plot3(ax, 0, 0, 0, '-bo', 'MarkerSize', 6, 'LineWidth', 1, 'MarkerFaceColor','blue', 'MarkerEdgeColor', 'blue'); % y轴机臂和2、4号电机
@@ -566,10 +549,10 @@ end
 end~~删除线文本~~
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMDA0ODE0MjUsOTc0ODQzOTYzLDYwOD
-MzMzMzMCwxNTg0MjMzMzAzLC0xMzMwNDg1NTEwLC01MzE5Nzky
-MjksMTA0Mzg0MzI0LDEyOTY5NTcxMTAsMTIxMTk3OTAxNywtMT
-U4MTUyMTIzOCwtOTkyOTczNjcwLDM1NTAwNTQ1OCwxNDU4NDcz
-Mjk4LC0yMzEzMjUzMDUsODY4MzMzMTc5LC05MDk3NjY1MzIsLT
-E5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxODc4OTAwMV19
+eyJoaXN0b3J5IjpbLTMyOTcyOTU0Miw5NzQ4NDM5NjMsNjA4Mz
+MzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1MTAsLTUzMTk3OTIy
+OSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNT
+gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
+OTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMT
+k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
 -->
