四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -442,6 +442,8 @@ y_lim_max = ceil(max(position(:,2))) + 2;
 z_lim_min = floor(min(position(:,3))) - 2;
 z_lim_max = ceil(max(position(:,3))) + 2;
 set(ax,'looseinset',get(ax,'tightinset'),'View',[-37.5,15],'Nextplot','add','Xgrid','on','Ygrid','on','Zgrid','on',...
+%%View: 设置三维视角（方位角 -37.5°，俯仰角 15°）
+%%ZDir 和 YDir: 反转z轴和y轴方向，符合NED坐标系（z 向下为正）
 
 'XLim',[x_lim_min x_lim_max],'YLim',[y_lim_min y_lim_max],'ZLim',[z_lim_min z_lim_max],...
 'XTick',x_lim_min:1:x_lim_max,'YTick',y_lim_min:1:y_lim_max,'ZTick',z_lim_min:1:z_lim_max,...
@@ -462,10 +464,10 @@ quadrotor_body = ...
 0, -ArmLength, 0, 1; ... % 4号电机
 0, 0, 0, 1; ... % 中心位置
 0, 0, -0.2, 1]'; % 类似于接收器的装备
+%%定义了四旋翼在机体坐标系中的关键点（齐次坐标），包括四个电机、中心点和接收器
 
 %% 画四旋翼结构
 h1 = plot3(ax, 0, 0, 0, '-bo', 'MarkerSize', 6, 'LineWidth', 1, 'MarkerFaceColor','red', 'MarkerEdgeColor', 'red'); % x轴机臂和1、3号电机
-
 h2 = plot3(ax, 0, 0, 0, '-bo', 'MarkerSize', 6, 'LineWidth', 1, 'MarkerFaceColor','blue', 'MarkerEdgeColor', 'blue'); % y轴机臂和2、4号电机
 
 h3 = plot3(ax, 0, 0, 0, '-b', 'Linewidth', 2); % 天线
@@ -549,10 +551,11 @@ end
 end~~删除线文本~~
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMyOTcyOTU0Miw5NzQ4NDM5NjMsNjA4Mz
-MzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1MTAsLTUzMTk3OTIy
-OSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMjExOTc5MDE3LC0xNT
-gxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1NDU4LDE0NTg0NzMy
-OTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLTkwOTc2NjUzMiwtMT
-k1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5MDAxXX0=
+eyJoaXN0b3J5IjpbLTE0ODM0ODU5NjYsLTMyOTcyOTU0Miw5Nz
+Q4NDM5NjMsNjA4MzMzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1
+MTAsLTUzMTk3OTIyOSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMj
+ExOTc5MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1
+NDU4LDE0NTg0NzMyOTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLT
+kwOTc2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5
+MDAxXX0=
 -->
