四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -469,23 +469,16 @@ quadrotor_body = ...
 %% 画四旋翼结构
 h1 = plot3(ax, 0, 0, 0, '-bo', 'MarkerSize', 6, 'LineWidth', 1, 'MarkerFaceColor','red', 'MarkerEdgeColor', 'red'); % x轴机臂和1、3号电机
 h2 = plot3(ax, 0, 0, 0, '-bo', 'MarkerSize', 6, 'LineWidth', 1, 'MarkerFaceColor','blue', 'MarkerEdgeColor', 'blue'); % y轴机臂和2、4号电机
-
 h3 = plot3(ax, 0, 0, 0, '-b', 'Linewidth', 2); % 天线
-
 h4 = plot3(ax, 0, 0, 0, '.k', 'MarkerSize',10); % 把四旋翼位置投影到 xoy平面
 
 % 电机周围圆圈
-
 th = linspace(-pi,pi,20);
-
 c1 = plot3(ax, 0, 0, 0, 'Color', [0 0 0]);
-
 c2 = plot3(ax, 0, 0, 0, 'Color', [0 0 0]);
-
 c3 = plot3(ax, 0, 0, 0, 'Color', [0 0 0]);
-
 c4 = plot3(ax, 0, 0, 0, 'Color', [0 0 0]);
-
+% 主循环：姿态变换与绘图
 for i = 1:1:size(t,1)
 
 quadrotor_pos = position(i,:)'; % 四旋翼在地球坐标系的位置 [x y z]
@@ -551,11 +544,11 @@ end
 end~~删除线文本~~
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0ODM0ODU5NjYsLTMyOTcyOTU0Miw5Nz
-Q4NDM5NjMsNjA4MzMzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1
-MTAsLTUzMTk3OTIyOSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMj
-ExOTc5MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1
-NDU4LDE0NTg0NzMyOTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLT
-kwOTc2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5
-MDAxXX0=
+eyJoaXN0b3J5IjpbNDU5Mzg1ODUzLC0zMjk3Mjk1NDIsOTc0OD
+QzOTYzLDYwODMzMzMzMCwxNTg0MjMzMzAzLC0xMzMwNDg1NTEw
+LC01MzE5NzkyMjksMTA0Mzg0MzI0LDEyOTY5NTcxMTAsMTIxMT
+k3OTAxNywtMTU4MTUyMTIzOCwtOTkyOTczNjcwLDM1NTAwNTQ1
+OCwxNDU4NDczMjk4LC0yMzEzMjUzMDUsODY4MzMzMTc5LC05MD
+k3NjY1MzIsLTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxODc4OTAw
+MV19
 -->
